<resources>
    <string name="app_name">MediApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Orders</string>
    <string name="menu_slideshow">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Settings">Settings</string>
    <string name="Orders">My Orders</string>
    <string name="Cart">My Cart</string>
    <string name="Categories">Choose category</string>
    <string name="Logout">Log out</string>
    <string name="Search">Search Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Search Product</string>
    <string name="add_to_cart">Add to cart</string>

</resources>