<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="100"
        android:title="@string/Categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/Search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/Cart"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_orders"
        android:orderInCategory="100"
        android:title="@string/Orders"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/Logout"
        app:showAsAction="never" />


</menu>